--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 200 400;
     line-height: 1.4;
     color: #f3f3f3;  
    
@@ -38,11 +38,21 @@ body::before{
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 40px 0px 40px 0px;
+    
+}
+
+.title h1{
+    font-weight: 400;
 }
 
 .small_title{
+    padding-top: 10px;
     font-weight: 100;
-    letter-spacing: 1;
+    font-style: italic;
+    letter-spacing: 0.1px;
+    font-size: 18px;
+    
 }
 
 .form{
@@ -50,25 +60,50 @@ body::before{
     flex-direction: column;
     align-items: flex-start;
     align-self: center;
-    background-color: rgba(7, 7, 15, 0.8);
+    background-color: rgba(7, 7, 15, 0.7);
     border-radius: 1%;
-    padding: 50px 50px 50px 50px; 
+    padding: 50px; 
 }
 
 .input-combo{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    padding: 10px 0px 10px 0px;
+    max-width: 90%;
 }
 
 .input-combo input {
-    border-radius: 2%;
+    border: none;  
+    border: solid 2px;
+    border-radius: 6px;
+    height: 40px;
+    width: 100%;
 }
 
-.radio{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.input-combo label{
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+.input-combo select{
+    border: none;  
+    border: solid 2px;
+    border-radius: 6px;
+    height: 40px;
+    width: 100%;
+}
+
+.radio-combo label{
+   display: inline-block;
+    cursor: pointer;
+    position: relative;
+}
+
+.radio label:before{
+    content: "";
+    font-size: 18px;
+    padding-bottom: 10px;
 }
 
 .radio-combo{
@@ -77,3 +112,8 @@ body::before{
     justify-content: flex-start;
    
 }
+.radio-text{
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
